# havit

./: .gitignore  Cargo.toml  README.md  bench.sh
src/: main.rs
src/migrations/: DISABLED-V2__add_unique_index.rs  V1__initial_migration.rs  V2__add_unique_index.rs  mod.rs
tests/: integration.rs
