[package]
name = "havit"
version = "0.1.0"
authors = ["Scott Bronson <brons_git@rinspin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4"
rusqlite = { version = "0.23.1", features = ["bundled", "chrono"] } # behind 0.25.0 because refinery requires an older libsqlite3-sys
refinery = { version = "0.5.0", features = ["rusqlite"] }
barrel = { version = "0.6.5", features = ["sqlite3"] }
